--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Postdoc Research Fellow <br />
 <li><p>[June 2025] <a href="https://arxiv.org/abs/2506.20344" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the global loss landscape analyais of deep matrix factorization is posted! 
 </p>
 </li>
-<li><p>[May 2025] <a href="https://arxiv.org/pdf/2506.03790" target=&ldquo;blank&rdquo;><b>Our paper</b></a> on understanding the mechenism of transformers has been accepted by <b>ICML 2025</b>! 
+<li><p>[May 2025] <a href="https://arxiv.org/pdf/2506.03790" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding the mechenism of transformers has been accepted by <b>ICML 2025</b>! 
 </p>
 </li>
 <li><p>[Apr 2025] Our recent works on studying the generalization of diffusion models appears on <a href="https://www.siam.org/publications/siam-news/articles/generalization-of-diffusion-models-principles-theory-and-implications/" target=&ldquo;blank&rdquo;><b>SIAM News Blog</b></a>!
@@ -130,18 +130,21 @@ Postdoc Research Fellow <br />
 <li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. <b>Minor revision</b> in <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
+<li><p><b>Peng Wang</b>*\(^\dagger\), Huijie Zhang*, Zekai Zhang, Siyi Chen, Yi Ma, Qing Qu. Diffusion Models Learn Low-Dimensional Distributions via Subspace Clustering, 2024. Under review in <b><i>Journal of Machine Learning Research</i></b>, 2025. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+</p>
+<ul>
+<li><p><b>NeurIPS 2024 M3L Workshop</b> &amp; <b>ICLR 2025 DeLTa Workshop</b>.
+</p>
+</li></ul>
+</li>
+<li><p>Huijie Zhang, Zijian Huang, Siyi Chen, Jinfan Zhou, Zekai Zhang, Peng Wang, Qing Qu. Understanding Generalization in Diffusion Models via Probability Flow Distance. Under review in <b>NeurIPS 2025</b>. [<a href="https://arxiv.org/pdf/2505.20123" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+</p>
+</li>
 <li><p>Xiao Li*, Zekai Zhang*, Xiang Li, Siyi Chen, Zhihui Zhu, <b>Peng Wang</b>\(^\dagger\), Qing Qu. Understanding Representation Dynamics of Diffusion Models via Low-Dimensional Modeling, 2025. Under review in <b>NeurIPS 2025</b>. [<a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
 <li><p>Alec S Xu, Can Yaras, <b>Peng Wang</b>, Qing Qu. Understanding How Nonlinear Layers Create Linearly Separable Features for Low-Dimensional Data, 2025. Under review in <b>SIAM Journal on Mathematics of Data Science</b>. [<a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
-</li>
-<li><p><b>Peng Wang</b>*, Huijie Zhang*, Zekai Zhang, Siyi Chen, Yi Ma, Qing Qu. Diffusion Models Learn Low-Dimensional Distributions via Subspace Clustering, 2024. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
-</p>
-<ul>
-<li><p>Accepted by <b>NeurIPS 2024 M3L Workshop</b> &amp; <b>ICLR 2025 DeLTa Workshop</b>.
-</p>
-</li></ul>
 </li>
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks, 2023. To be submitted. [<a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
@@ -164,7 +167,7 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Conference Papers</h2>
 <ul>
-<li><p><b>Peng Wang</b>, Yifu Lu, Yaodong Yu, Druv Pai, Qing Qu, Yi Ma. Attention-Only Transformers via Unrolled Subspace Denoising. Accepted by <b><i>ICML 2025</i></b>. [<a href="https://arxiv.org/pdf/2506.03790" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p><b>Peng Wang</b>, Yifu Lu, Yaodong Yu, Druv Pai, Qing Qu, Yi Ma. Attention-Only Transformers via Unrolled Subspace Denoising. <b><i>ICML 2025</i></b>. [<a href="https://arxiv.org/pdf/2506.03790" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Can Yaras*, Siyi Chen*, Peng Wang, Qing Qu. Explaining and Mitigating the Modality Gap in Contrastive Multimodal Learning. <b><i>CAPL 2025</i></b>. [<a href="https://arxiv.org/pdf/2412.07909" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
@@ -222,7 +225,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-26 09:39:41 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-07-06 10:15:04 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
