--- a/index.html
+++ b/index.html
@@ -33,18 +33,25 @@ MathJax.Hub.Config({
 <table class="imgtable"><tr><td>
 <img src="tianlai.jpg" alt="Peng Wang Photo" width="150px" />&nbsp;</td>
 <td align="left"><p>Peng Wang <br />
-Postdoc Research Fellow <br />
-<a href="https://eecs.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Department of Electrical Engineering and Computer Science</b></a> <br /> 
-<a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan, Ann Arbor</b></a> <br />
-<b>Email</b>: pengwa@umich.edu <br />
+Assistant Professor <br />
+<a href="https://www.cis.um.edu.mo/" target=&ldquo;blank&rdquo;><b>Computer and Information Science</b></a> <br />
+<a href="https://www.um.edu.mo/" target=&ldquo;blank&rdquo;><b>University of Macau</b></a> <br />
+<b>Email</b>: pengw@um.edu.mo <br />
+
+
+
+
 <a href="https://scholar.google.com/citations?user=baF3HKUAAAAJ&amp;hl=zh-TW" target=&ldquo;blank&rdquo;><b>Google Scholar</b></a>, <a href="https://orcid.org/0000-0002-6799-0745" target=&ldquo;blank&rdquo;><b>ORCDI</b></a>
 </p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I am currently a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;><b>Laura Balzano</b></a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Qing Qu</b></a> at <a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan</b></a>. Before that, I got my Ph.D. degree in Systems Engineering and Engineering Management advised by Professor <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;><b>Anthony Man-Cho So</b></a> at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;><b>The Chinese University of Hong Kong</b></a>.
+<p>Currently, I am an assistant professor at the Department of <a href="https://www.cis.um.edu.mo/" target=&ldquo;blank&rdquo;><b>Computer and Information Science</b></a> at the <a href="https://www.um.edu.mo/" target=&ldquo;blank&rdquo;><b>University of Macau</b></a>. Before this, I am a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;><b>Laura Balzano</b></a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Qing Qu</b></a> at the <a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan</b></a>. I got my Ph.D. degree in Systems Engineering and Engineering Management advised by Professor <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;><b>Anthony Man-Cho So</b></a> at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;><b>The Chinese University of Hong Kong</b></a>.
+</p>
+<h2>Open positions</h2>
+<p>I am actively seeking PhD students with a strong background in mathematics or programming. Research assistants and postdoctoral positions are also available. If you are interested, please feel free to contact me directly! 
 </p>
 <h2>Research Interests </h2>
-<p>Broadly speaking, my research interest lies in the intersects of <b>optimization</b>, <b>machine learning</b>, and <b>data science</b>. Currently, I am devoted to understanding <b>mathematical foundations of deep learning models</b>, including supervised learning models, diffusion models, and large language models. I mainly study how low-complexity structures (e.g., low-rankness, sparsity, over-parameterization) in practical problems lead to favorable optimization properties and use them to mitigate the challenges caused by worst-case scenarios, enable efficient optimization, and improve our understanding of learning phenomena. 
+<p>Broadly speaking, my research interest lies in the intersects of <b>optimization</b>, <b>machine learning</b>, and <b>artifical intelligence</b>. Currently, I am devoted to understanding <b>mathematical foundations of deep learning and generative AI models</b>, including supervised learning models, diffusion models, and large language models. I mainly study how low-complexity structures (e.g., low-rankness, sparsity, over-parameterization) in practical problems lead to favorable optimization properties and use them to mitigate the challenges caused by worst-case scenarios, enable efficient optimization, and improve our understanding of learning phenomena. 
 
 
 </p>
@@ -225,7 +232,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-06 10:15:04 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-02 00:46:43 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
