--- a/teaching.html
+++ b/teaching.html
@@ -23,18 +23,45 @@ MathJax.Hub.Config({
 <td id="layout-menu">
 <div class="menu-category">Peng Wang</div>
 <div class="menu-item"><a href="index.html"><b>Home</b></a></div>
-<div class="menu-item"><a href="activity.html"><b>Activities</b></a></div>
+<div class="menu-item"><a href="publication.html"><b>Publications</b></a></div>
 <div class="menu-item"><a href="teaching.html" class="current"><b>Teaching</b></a></div>
 </td>
 <td id="layout-content">
 <p>
 </p>
-<h1><b></b>CISC7402 (Fall 2025) - Mathematics for Artificial Intelligence<b></b>  </h1>
-<p>
+<h2><b></b>CISC7402 (Fall 2025) - Mathematics for Artificial Intelligence<b></b>  </h2>
+<ul>
+<li><p><b>Annoucements</b>
 </p>
 <ul>
-<li><p><b>Course Description:</b> This course covers the fundamental mathematical concepts and tools essential for understanding and developing modern artificial intelligence models. The first part focus on the fundamental mathematical concepts, including optimization, statistics, and basic machine learning models. The second part explores advanced AI models, including diffusion models, Transformers, and large language models, emphasizing both theoretical foundations and practical insights. Throughout the course, students will learn to apply mathematical tools to understand the principles behind AI models and to design new models with solid theoretical foundations.
+<li><p><font color=red size=+0.5><b>New</b></font>: The first lecture is on <b>August 22, 2025</b>!
+
 </p>
+</li></ul>
+</li>
+<li><p><b>General Information</b>
+</p>
+<ul>
+<li><p><b>Instructor</b>: Peng Wang
+
+</p>
+</li></ul>
+</li>
+<li><p><b>Course Description:</b> This course covers the fundamental mathematical concepts and tools essential for understanding and developing modern artificial intelligence models. The first part focus on the fundamental mathematical concepts, including optimization, statistics, and basic machine learning models. The second part explores advanced AI models, including diffusion models, Transformers, and large language models, emphasizing both theoretical foundations and practical insights. Throughout the course, students will learn to apply mathematical tools to understand the principles behind AI models and to design new models with solid theoretical foundations.
+
+</p>
+</li>
+<li><p><b>Course Grading:</b> Homework sets (40%), mid-term examination (30%), and final project (oral presentation 15% + project report 15%)
+
+</p>
+</li>
+<li><p><b>Course Content:</b>
+</p>
+<ul>
+<li><p><b></b>Week 1.<b></b> Introduction and Basic Concepts: <a href="files/Lecture_1.pdf" target=&ldquo;blank&rdquo;>Lecture 1</a> | <a href="files/Handout_1.pdf" target=&ldquo;blank&rdquo;>Handout 1</a></p>
+</li>
+</ul>
+
 </li>
 </ul>
 </td>
