--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Assistant Professor <br />
 <h2>About Me</h2>
 <p>Currently, I am an assistant professor at the Department of <a href="https://www.cis.um.edu.mo/" target=&ldquo;blank&rdquo;><b>Computer and Information Science</b></a> at the <a href="https://www.um.edu.mo/" target=&ldquo;blank&rdquo;><b>University of Macau</b></a>. Before this, I am a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;><b>Laura Balzano</b></a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Qing Qu</b></a> at the <a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan</b></a>. I got my Ph.D. degree under the supervision of Professor <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;><b>Anthony Man-Cho So</b></a>  at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;><b>The Chinese University of Hong Kong</b></a> and bachelor's degree from <a href="https://www.bupt.edu.cn/" target=&ldquo;blank&rdquo;><b>Beijing University of Posts and Telecommunications</b></a>. 
 </p>
-<h2>Open positions</h2>
+<h2>Open positions (<font color=red size=+0.5><b>Fall 2026</b></font>)</h2>
 <p>I am actively seeking PhD students with a strong background in mathematics or programming. Research assistants and postdoctoral positions are also available. If you are interested, please feel free to contact me directly! Please visit <a href="position.html" target=&ldquo;blank&rdquo;><b>here</b></a> for more information!
 </p>
 <h2>Research Interests </h2>
@@ -125,7 +125,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-02 23:20:44 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-04 16:18:04 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
