--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ MathJax.Hub.Config({
 <div class="menu-category">Peng Wang</div>
 <div class="menu-item"><a href="index.html" class="current"><b>Home</b></a></div>
 <div class="menu-item"><a href="publication.html"><b>Publications</b></a></div>
-<div class="menu-item"><a href="teaching.html"><b>Teaching</b></a></div>
+<div class="menu-item"><a href="position.html"><b>Openings</b></a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -57,6 +57,12 @@ Assistant Professor <br />
 </p>
 <p><b> Feel free to email me if you are interested in my research. Remote collaboration is also welcome!</b> 
 </p>
+<h2>Teaching courses</h2>
+<ul>
+<li><p><b>CISC7402 Mathematics for Artificial Intelligence</b> (Fall 2025)
+</p>
+</li>
+</ul>
 <h2>What's New</h2>
 <ul>
 <li><p>[June 2025] <a href="https://arxiv.org/abs/2506.20344" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the global loss landscape analyais of deep matrix factorization is posted! 
@@ -125,7 +131,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-04 16:18:04 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-05 15:42:21 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
