--- a/position.html
+++ b/position.html
@@ -24,7 +24,7 @@ MathJax.Hub.Config({
 <div class="menu-category">Peng Wang</div>
 <div class="menu-item"><a href="index.html"><b>Home</b></a></div>
 <div class="menu-item"><a href="publication.html"><b>Publications</b></a></div>
-<div class="menu-item"><a href="teaching.html"><b>Teaching</b></a></div>
+<div class="menu-item"><a href="position.html" class="current"><b>Openings</b></a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -136,7 +136,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-02 23:06:46 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-05 15:42:17 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
