--- a/publication.html
+++ b/publication.html
@@ -24,7 +24,7 @@ MathJax.Hub.Config({
 <div class="menu-category">Peng Wang</div>
 <div class="menu-item"><a href="index.html"><b>Home</b></a></div>
 <div class="menu-item"><a href="publication.html" class="current"><b>Publications</b></a></div>
-<div class="menu-item"><a href="teaching.html"><b>Teaching</b></a></div>
+<div class="menu-item"><a href="position.html"><b>Openings</b></a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
