--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@ Assistant Professor <br />
 </ul>
 <h2>What's New</h2>
 <ul>
+<li><p>[August 2025] Our new book <a href="https://ma-lab-berkeley.github.io/deep-representation-learning-book/" target=&ldquo;blank&rdquo;><b>Learning Deep Representations of Data Distributions</b></a> is posted online! Thanks for my wonderful collaborators Dr. Sam Buchanan, Druv Pai, and Prof. Yi Ma! 
+</p>
+</li>
 <li><p>[June 2025] <a href="https://arxiv.org/abs/2506.20344" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the global loss landscape analyais of deep matrix factorization is posted! 
 </p>
 </li>
@@ -131,7 +134,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-05 15:42:21 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-21 00:18:12 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
