--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@ Assistant Professor <br />
 </ul>
 <h2>What's New</h2>
 <ul>
+<li><p>[August 2025] <a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>Our paper</b></a> on understanding <b>hierarchical representation learning</b> of deep neural networks is accepted by <a href="https://jmlr.org/" target=&ldquo;blank&rdquo;><b>JMLR</b></a>!  
+</p>
+</li>
 <li><p>[August 2025] Our new book <a href="https://ma-lab-berkeley.github.io/deep-representation-learning-book/" target=&ldquo;blank&rdquo;><b>Learning Deep Representations of Data Distributions</b></a> is posted online! Thanks for my wonderful collaborators Dr. Sam Buchanan, Druv Pai, and Prof. Yi Ma! 
 </p>
 </li>
@@ -134,7 +137,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-21 00:18:12 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-26 13:28:58 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
