--- a/publication.html
+++ b/publication.html
@@ -46,9 +46,6 @@ MathJax.Hub.Config({
 <li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\). Error Bound Analysis for the Regularized Loss of Deep Linear Neural Networks, 2025. [<a href="https://arxiv.org/pdf/2502.11152" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. <b>Minor revision</b> in <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
-</p>
-</li>
 <li><p><b>Peng Wang</b>*\(^\dagger\), Huijie Zhang*, Zekai Zhang, Siyi Chen, Yi Ma, Qing Qu. Diffusion Models Learn Low-Dimensional Distributions via Subspace Clustering, 2024. Under review in <b><i>Journal of Machine Learning Research</i></b>, 2025. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 <ul>
@@ -76,6 +73,9 @@ MathJax.Hub.Config({
 </ul>
 <h2>Journal Papers </h2>
 <ul>
+<li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. Accepted for publication in <b><i>Journal of Machine Learning Research</i></b>, 2025. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+</p>
+</li>
 <li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal Difference-of-Convex Algorithm for Sample Average Approximation of Chance Constrained Programming. Accepted for publication in <b><i>INFORMS Journal on Computing</i></b>, 2025. [<a href="https://pubsonline.informs.org/doi/abs/10.1287/ijoc.2024.0648" target=&ldquo;blank&rdquo;><b>paper</b></a>, <a href="https://github.com/peng8wang/2024.0648" target=&ldquo;blank&rdquo;><b>code</b></a>] 
 </p>
 </li>
