--- a/publication.html
+++ b/publication.html
@@ -34,9 +34,6 @@ MathJax.Hub.Config({
 </div>
 <h2>Preprints (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution, &lsquo;&lsquo;\(\dagger\)&rsquo;&rsquo; denotes corresponding author.)</h2>
 <ul>
-<li><p><b>Learning Deep Representations of Data Distributions</b>. Sam Buchanan, Druv Pai, <b>Peng Wang</b>, Yi Ma. An open source book, 2025. [<a href="https://ma-lab-berkeley.github.io/deep-representation-learning-book/" target=&ldquo;blank&rdquo;><b>book</b></a>]  
-</p>
-</li>
 <li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\). A Complete Loss Landscape Analysis of Regularized Deep Matrix Factorization, 2025. [<a href="https://arxiv.org/pdf/2506.20344" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
@@ -67,6 +64,13 @@ MathJax.Hub.Config({
 </li>
 <li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. A Linearly Convergent Algorithm for Rotationally Invariant L1-Norm Principal Component Analysis, 2022. [<a href="https://arxiv.org/pdf/2210.05066.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 
+
+</p>
+</li>
+</ul>
+<h2>Books</h2>
+<ul>
+<li><p><b>Learning Deep Representations of Data Distributions</b>. Sam Buchanan, Druv Pai, <b>Peng Wang</b>, Yi Ma. An open source book, 2025. [<a href="https://ma-lab-berkeley.github.io/deep-representation-learning-book/" target=&ldquo;blank&rdquo;><b>book</b></a>]  
 
 </p>
 </li>
