--- a/publication.html
+++ b/publication.html
@@ -75,6 +75,13 @@ MathJax.Hub.Config({
 </p>
 </li>
 </ul>
+<h2>Newsletters </h2>
+<ul>
+<li><p>Huijie Zhang, <b>Peng Wang</b>, Siyi Chen, Zekai Zhang, Qing Qu. Generalization of Diffusion Models: Principles, Theory, and Implications. SIAM News, 2025. [<a href="https://www.siam.org/publications/siam-news/articles/generalization-of-diffusion-models-principles-theory-and-implications/" target=&ldquo;blank&rdquo;><b>blog</b></a>] 
+
+</p>
+</li>
+</ul>
 <h2>Journal Papers </h2>
 <ul>
 <li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. Accepted for publication in <b><i>Journal of Machine Learning Research</i></b>, 2025. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>]
