--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@ Assistant Professor <br />
 </ul>
 <h2>What's New</h2>
 <ul>
+<li><p>[September 2025] <a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding feature learning of diffusion models is accepted by <b>NeurIPS 2025</b>!
+</p>
+</li>
 <li><p>[August 2025] <a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>Our paper</b></a> on understanding <b>hierarchical representation learning</b> of deep neural networks is accepted by <a href="https://jmlr.org/" target=&ldquo;blank&rdquo;><b>JMLR</b></a>!  
 </p>
 </li>
@@ -137,7 +140,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-05 16:41:44 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-09-19 00:01:22 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
