--- a/publication.html
+++ b/publication.html
@@ -53,9 +53,6 @@ MathJax.Hub.Config({
 <li><p>Huijie Zhang, Zijian Huang, Siyi Chen, Jinfan Zhou, Zekai Zhang, Peng Wang, Qing Qu. Understanding Generalization in Diffusion Models via Probability Flow Distance. Under review in <b>NeurIPS 2025</b>. [<a href="https://arxiv.org/pdf/2505.20123" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
-<li><p>Xiao Li*, Zekai Zhang*, Xiang Li, Siyi Chen, Zhihui Zhu, <b>Peng Wang</b>\(^\dagger\), Qing Qu. Understanding Representation Dynamics of Diffusion Models via Low-Dimensional Modeling, 2025. Under review in <b>NeurIPS 2025</b>. [<a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
-</p>
-</li>
 <li><p>Alec S Xu, Can Yaras, <b>Peng Wang</b>, Qing Qu. Understanding How Nonlinear Layers Create Linearly Separable Features for Low-Dimensional Data, 2025. Under review in <b>SIAM Journal on Mathematics of Data Science</b>. [<a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
@@ -100,6 +97,9 @@ MathJax.Hub.Config({
 </ul>
 <h2>Conference Papers</h2>
 <ul>
+<li><p>Xiao Li*, Zekai Zhang*, Xiang Li, Siyi Chen, Zhihui Zhu, <b>Peng Wang</b>\(^\dagger\), Qing Qu. Understanding Representation Dynamics of Diffusion Models via Low-Dimensional Modeling, 2025. To appear in <b>NeurIPS 2025</b>. [<a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+</p>
+</li>
 <li><p><b>Peng Wang</b>, Yifu Lu, Yaodong Yu, Druv Pai, Qing Qu, Yi Ma. Attention-Only Transformers via Unrolled Subspace Denoising. <b><i>ICML 2025</i></b>. [<a href="https://arxiv.org/pdf/2506.03790" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
