--- a/publication.html
+++ b/publication.html
@@ -97,7 +97,7 @@ MathJax.Hub.Config({
 </ul>
 <h2>Conference Papers</h2>
 <ul>
-<li><p>Xiao Li*, Zekai Zhang*, Xiang Li, Siyi Chen, Zhihui Zhu, <b>Peng Wang</b>\(^\dagger\), Qing Qu. Understanding Representation Dynamics of Diffusion Models via Low-Dimensional Modeling, 2025. To appear in <b>NeurIPS 2025</b>. [<a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+<li><p>Xiao Li*, Zekai Zhang*, Xiang Li, Siyi Chen, Zhihui Zhu, <b>Peng Wang</b>\(^\dagger\), Qing Qu. Understanding Representation Dynamics of Diffusion Models via Low-Dimensional Modeling. To appear in <b><i>NeurIPS 2025</i></b>. [<a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
 <li><p><b>Peng Wang</b>, Yifu Lu, Yaodong Yu, Druv Pai, Qing Qu, Yi Ma. Attention-Only Transformers via Unrolled Subspace Denoising. <b><i>ICML 2025</i></b>. [<a href="https://arxiv.org/pdf/2506.03790" target=&ldquo;blank&rdquo;><b>paper</b></a>]
