--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="index.html" class="current"><b>Home</b></a></div>
 <div class="menu-item"><a href="publication.html"><b>Publications</b></a></div>
 <div class="menu-item"><a href="position.html"><b>Openings</b></a></div>
+<div class="menu-item"><a href="activity.html"><b>Activities</b></a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -140,7 +141,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-27 19:48:51 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-13 10:18:41 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
