--- a/position.html
+++ b/position.html
@@ -25,6 +25,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="index.html"><b>Home</b></a></div>
 <div class="menu-item"><a href="publication.html"><b>Publications</b></a></div>
 <div class="menu-item"><a href="position.html" class="current"><b>Openings</b></a></div>
+<div class="menu-item"><a href="activity.html"><b>Activities</b></a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -134,11 +135,6 @@ MathJax.Hub.Config({
 <li><p>Brief statement of research interests</p>
 </li>
 </ul>
-<div id="footer">
-<div id="footer-text">
-Page generated 2025-08-05 15:42:17 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
-</div>
-</div>
 </td>
 </tr>
 </table>
