--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ Assistant Professor <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[October 2025] I will give a presentation at the <a href="https://www.sta.cuhk.edu.hk/events/understanding-distribution-learning-of-diffusion-models-via-low-dimensional-modeling/" target=&ldquo;blank&rdquo;><b>seminar</b></a> hosted by the Department of Statistics and Data Science at the Chinese University of Hong Kong! 
+</p>
+</li>
 <li><p>[September 2025] <a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding feature learning of diffusion models is accepted by <b>NeurIPS 2025</b>!
 </p>
 </li>
@@ -141,7 +144,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-13 10:18:41 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-19 21:29:26 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
