--- a/activity.html
+++ b/activity.html
@@ -33,6 +33,9 @@ MathJax.Hub.Config({
 </div>
 <h2>Talks</h2>
 <ul>
+<li><p>Invited talk in the <a href="https://www.sta.cuhk.edu.hk/events/understanding-distribution-learning-of-diffusion-models-via-low-dimensional-modeling/" target=&ldquo;blank&rdquo;><b>Chinese University of Hong Kong</b></a>, Hong Kong, China, October 2025! 
+</p>
+</li>
 <li><p>Poster presentation in <a href="https://2025.cpal.cc/" target=&ldquo;blank&rdquo;><b>The Conference on Parsimony and Learning (CPAL)</b></a>, Standford University, CA, USA, March 2025
 </p>
 </li>
