--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ Assistant Professor <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[October 2025] I will give a talk at the <a href="https://conferences.cis.um.edu.mo/HKUSTGZ_UM_DS2025/" target=&ldquo;blank&rdquo;>HKUST(GZ) & UM Data Science Workshop</a> at the University of Macau! 
+</p>
+</li>
 <li><p>[October 2025] I will give a presentation at the <a href="https://www.sta.cuhk.edu.hk/events/understanding-distribution-learning-of-diffusion-models-via-low-dimensional-modeling/" target=&ldquo;blank&rdquo;><b>seminar</b></a> hosted by the Department of Statistics and Data Science at the Chinese University of Hong Kong! 
 </p>
 </li>
@@ -144,7 +147,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-19 21:29:26 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-10-24 11:45:29 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
