--- a/publication.html
+++ b/publication.html
@@ -25,6 +25,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="index.html"><b>Home</b></a></div>
 <div class="menu-item"><a href="publication.html" class="current"><b>Publications</b></a></div>
 <div class="menu-item"><a href="position.html"><b>Openings</b></a></div>
+<div class="menu-item"><a href="lab.html"><b>OptAI&nbsp;Lab</b></a></div>
 <div class="menu-item"><a href="activity.html"><b>Activities</b></a></div>
 </td>
 <td id="layout-content">
