--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ Assistant Professor <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[November 2025] I will give a talk at the <a href="https://conf.orsc.org.cn/conferences/detail?id=37" target=&ldquo;blank&rdquo;><b>Conference on Mathematics and AI Science</b></a> in Dongguan, Guangdong! 
+</p>
+</li>
 <li><p>[October 2025] I will give a talk at the <a href="https://conferences.cis.um.edu.mo/HKUSTGZ_UM_DS2025/" target=&ldquo;blank&rdquo;><b>HKUST(GZ) & UM Data Science Workshop</b></a> at the University of Macau! 
 </p>
 </li>
@@ -148,7 +151,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-28 22:27:38 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-11-09 12:59:24 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
