--- a/publication.html
+++ b/publication.html
@@ -36,7 +36,7 @@ MathJax.Hub.Config({
 </div>
 <h2>Preprints (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution, &lsquo;&lsquo;\(\dagger\)&rsquo;&rsquo; denotes corresponding author.)</h2>
 <ul>
-<li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\). A Complete Loss Landscape Analysis of Regularized Deep Matrix Factorization, Under review in <b><i>SIAM Journal on Optimization</i></b>, 2025. [<a href="https://arxiv.org/pdf/2506.20344" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\). A Complete Loss Landscape Analysis of Regularized Deep Matrix Factorization, Under revision in <b><i>SIAM Journal on Optimization</i></b>, 2025. [<a href="https://arxiv.org/pdf/2506.20344" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Laura Balzano\(^\dagger\), Tianjiao Ding\(^\dagger\), Benjamin D. Haeffele, Soo Min Kwon, Qing Qu, <b>Peng Wang</b>\(^\dagger\), Zhangyang Wang, Can Yaras. An Overview of Low-Rank Structures in the Training and Adaptation of Large Models. Under revision in <b><i>IEEE Signal Processing Magazine</i></b>, 2025. [<a href="https://arxiv.org/pdf/2503.19859" target=&ldquo;blank&rdquo;><b>paper</b></a>]
